@@ -1,8 +1,8 @@
-<!ENTITY day          "30">
+<!ENTITY day          "31">
 <!ENTITY month        "05">
 <!ENTITY year         "2005">
 <!ENTITY version      "svn-&year;&month;&day;">
-<!ENTITY releasedate  "May &day;th, &year;">
+<!ENTITY releasedate  "May &day;st, &year;">
 <!ENTITY pubdate      "&year;-&month;-&day;"> <!-- metadata req. by TLDP -->
 <!ENTITY blfs-version "svn">                  <!-- svn|[release #] -->
 <!ENTITY lfs-version  "development">          <!-- version|stable|testing|unstable|development] -->
@@ -21,7 +21,7 @@
 <!ENTITY publisher      "Unknown">
 
 
-<!ENTITY blfs-bootscripts-version     "20050530">
+<!ENTITY blfs-bootscripts-version     "20050531">
 <!ENTITY blfs-bootscripts-download    "&downloads-root;/blfs-bootscripts-&blfs-bootscripts-version;.tar.bz2">
 
 <!-- Part II -->
