@@ -188,7 +188,12 @@ EOF</userinput></screen>
 
       <para>To start a graphical login at boot, install the
       <filename>/etc/rc.d/init.d/gdm</filename> init script included in the
-      <xref linkend="intro-important-bootscripts"/> package.</para>
+      <xref linkend="intro-important-bootscripts"/> package. If your
+      <envar>GNOME_PREFIX</envar> environment variable is anything other than
+      <filename class='directory'>/usr</filename> or
+      <filename class='directory'>/opt/gnome-2.10</filename>, you will need to
+      modify the <envar>PATH</envar> statement in the script to include the 
+      path where you have <application>GNOME</application> installed.</para>
 
       <indexterm zone="gdm gdm-init">
         <primary sortas="f-gdm">gdm</primary>
