@@ -25,6 +25,13 @@
   <itemizedlist>
 
     <listitem>
+      <para>May 31st, 2005 [randy]: Removed the explicit path from the 
+      GDM bootscript commands and updated the GDM instructions to include a 
+      note to update the script if $GNOME_PREFIX is non-stardard; updated
+      bootscripts to version 20050531.</para>
+    </listitem>
+
+    <listitem>
       <para>May 30th, 2005 [randy]: Updated to GDM-2.6.0.9, GNOME Speech-0.3.7,
       Gnopernicus-0.10.9 and GOK-1.0.4; added new package libexif-0.6.12;
       moved libexif to a required dependency of Nautilus.</para>
