@@ -1,3 +1,6 @@
+2005-05-31 Randy McMurchy <randy@linuxfromscratch.org>
+	* Removed explicit path from GDM script commands so that the commands
+	will work no matter where $GNOME_PREFIX is.
 
 2005-05-30 Randy McMurchy <randy@linuxfromscratch.org>
 	* Updated GDM script to GNOME-2.10.
